[package]
name = "rust-pubsub"
version = "0.1.1"
edition = "2024"
description = "A thread-safe, in-memory publish-subscribe library for Rust with flexible subscription modes."
license = "MIT OR Apache-2.0"
authors = ["yezenghui <y956370541@163.com>"]
repository = "https://github.com/Ye-Zenghui/rust-pubsub"
keywords = ["pubsub", "mpmc", "emmit", "queue", "event"]
categories = ["concurrency", "data-structures"]

[dependencies]
crossbeam-channel = "0.5"
lazy_static = "1.4"
uuid = { version = "1.3", features = ["v4"] }


